--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-spring.application.name=axios
+spring.application.name=healthdesk
+server.port=9112
+server.tomcat.remoteip.remote-ip-header=x-forwarded-for
+server.tomcat.remoteip.protocol-header=x-forwarded-proto
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://147.93.98.55:3306/healthdesk
+spring.datasource.username=healthdesk-bot
+spring.datasource.password=Healthdesk-retard@811
