--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,66 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+# Virtual environments
+.venv/
+venv/
+ENV/
+env/
 
-# testing
-/coverage
+# Environment variables
+.env
+.env.local
 
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 .DS_Store
-*.pem
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
+# Jupyter Notebook
+.ipynb_checkpoints
 
-# env files (can opt-in for committing if needed)
-.env*
+# Model files (if large, may want to track via Git LFS or external storage)
+# Note: keeping joblib files for deployment
+# *.joblib
+*.pkl
+*.h5
+*.pt
+*.pth
 
-# vercel
-.vercel
+# Logs
+*.log
+logs/
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+
+# Docker
+docker-compose.override.yml
+
+# OS
+Thumbs.db
