--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,14 @@ pandas
 scikit-learn
 lightgbm
 joblib
+
+# medical-bot
+langchain-pinecone
+langchain-groq
+langchain-community
+langchain-text-splitters
+langchain-huggingface
+sentence-transformers
+groq
+pinecone
+langchain-google-genai
