--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,10 @@ sentence-transformers
 groq
 pinecone
 langchain-google-genai
+
+# medreach
+requests
+python-multipart
+python-dotenv
+langchain
+langchain-google-genai
